adjusted initial packet description

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "andimg93/disposable-mail-detection",
-    "description": "Temporary (disposable/throwaway) email detection library - Throwaway mail addresses are a plague, but one you don't have to worry about anymore. Covers about 130k fake mail providers!",
+    "description": "Temporary (disposable/throwaway) email detection library - Throwaway mail addresses are a plague, but one you don't have to worry about anymore.",
     "keywords": ["fake", "email", "detection", "disposable", "throwaway", "mail", "provider", "temporary", "domains"],
     "license": "MIT",
     "require": {
