use curl for sources fetching + updated fake mail provider list

--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "keywords": ["fake", "email", "detection", "disposable", "throwaway", "mail", "provider", "temporary", "domains"],
     "license": "MIT",
     "require": {
-        "php": ">=7.3"
+        "php": ">=7.3",
+        "ext-curl": "*"
     },
     "autoload": {
         "classmap": ["Verifier.php"]
